<resources>
    <string name="app_name">Meal o\'Topia</string>
    <string name="appsName">Meal o\'Topia</string>
    <string name="etHintEmail">Email</string>
    <string name="etHintPassword">Password</string>
    <string name="btnTxt_Login">Login</string>
    <string name="tvPopupDescDummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="tvPopupDescWarning">We\'re Sorry, an error occurred.\nPlease check again email and password entered</string>
    <string name="tvPopupDescSuccess">Welcome to Meal o\'Topia.\nHave fun exploring here</string>
    <string name="btnTxt_Popup">OK</string>
    <string name="tvDummyWarning_Email">Dummy Warning</string>
    <string name="tvWarning_Email"><sup>*</sup>Please input according to the email format</string>
    <string name="tvWarning_Logout">Are you sure want to Log out ?</string>
    <string name="tvSuccess_Logout">You have logged out. Don\'t hesitate to visit us again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvIItemUser_DummyName">Dummy Name</string>
    <string name="tvIItemUser_DummyEmail">dummy_email@email.com</string>
    <string name="tvItem_DummyFoodName">Dummy Food Name</string>
    <string name="tvItem_DummyFoodCategory">Dummy Food Category</string>
    <string name="tvItem_DummyFoodInstructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim diam vulputate ut pharetra sit amet. Mattis pellentesque id nibh tortor.</string>
    <string name="tvIsv_Hint">Type food you want to see…</string>
    <string name="tvDetail_DummyMealName">Dummy Meal Name</string>
    <string name="tvRv_DummyIngridientName">Dummy Ingridient Name</string>
    <string name="tvRv_DummyMeasure">(Dummy Measure)</string>
    <string name="tvToolbarTitle">Detail Meal</string>
    <string name="tvAnnouncement">There is no bookmarked meal. Bookmark first from list of Meal</string>
</resources>