<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/bg_square_white_grey">

    <ImageView
        android:id="@+id/ivMeal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivMeal"
        app:layout_constraintTop_toTopOf="@+id/ivMeal"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:fontFamily="@font/italianbreakfastregular"
        android:textColor="@color/black"
        android:text="@string/tvItem_DummyFoodName"/>

    <TextView
        android:id="@+id/tvMealCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvMealName"
        app:layout_constraintTop_toBottomOf="@+id/tvMealName"
        app:layout_constraintBottom_toTopOf="@+id/tvMealInstructions"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:text="@string/tvItem_DummyFoodCategory"/>

    <TextView
        android:id="@+id/tvMealInstructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:lines="3"
        app:layout_constraintStart_toStartOf="@+id/tvMealCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealCategory"
        app:layout_constraintBottom_toBottomOf="@+id/ivMeal"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/tvItem_DummyFoodInstructions"
        android:ellipsize="end"/>


</androidx.constraintlayout.widget.ConstraintLayout>